--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "git": "^0.1.5",
+    "osmd-audio-player": "^0.6.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "vexflow": "^3.0.9",
