--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "git": "^0.1.5",
+    "git": "^0.1.3",
     "osmd-audio-player": "^0.6.4",
     "rxjs": "~6.6.0",
+    "soundfont-player": "^0.12.0",
     "tslib": "^2.0.0",
     "vexflow": "^3.0.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular-devkit/build-angular": "^12.0.0",
     "@angular/cli": "^11.2.11",
     "@angular/compiler-cli": "~11.0.5",
     "@types/jasmine": "~3.6.0",
@@ -38,7 +39,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
