--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ng-web-apis/audio": "^1.5.1",
+    "@ng-web-apis/common": "^1.9.0",
+    "@ng-web-apis/midi": "^1.2.0",
     "git": "^0.1.5",
     "osmd-audio-player": "^0.6.4",
+    "response": "^0.18.0",
     "rxjs": "~6.6.0",
     "soundfont-player": "^0.12.0",
     "tslib": "^2.0.0",
     "vexflow": "^3.0.9",
+    "web-midi-api": "^2.0.8",
+    "webmidi": "^2.5.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
